src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/error/HadUserBannedException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.error;

public class HadUserBannedException extends RuntimeException {
    public HadUserBannedException(String message) {
        super(message);
    }
}
